--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #d87c7c;
+    height: 100%;
+    position: fixed;
+    overflow: auto;
+  }
+  
+  li a {
+    display: block;
+    color: black;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
 
 .container {
     display: inline-block;
