--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 
 .container {
-    display: inline-block;
     width: 250px;
     height: 150px;
     border: 2px solid #2ecc71;
@@ -8,14 +7,14 @@
     margin-right: 20px;
     box-sizing: border-box;
     text-align: center;
-    line-height: 130px;
+    line-height: 200px;
 }
 
 .elem {
+    background-color: grey;
+    box-sizing: border-box;
+    align-items: center;
+    
 
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    background-color: #f39c12;
-    border-radius: 50%;
+
 }
