--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ ul {
     margin: 0;
     padding: 0;
     width: 200px;
-    background-color: #d87c7c;
+    background-color: darkgrey;
     height: 100%;
     position: fixed;
     overflow: auto;
+    opacity: 70%;
   }
   
   li a {
@@ -25,6 +26,7 @@ ul {
     box-sizing: border-box;
     text-align: center;
     line-height: 200px;
+    float: right;
 }
 
 .elem {
