--- a/kowi.css
+++ b/kowi.css
@@ -16,3 +16,17 @@ ul {
     padding: 8px 16px;
     text-decoration: none;
   }
+
+  .container {
+    border-radius: 10px;
+
+  }
+  .elem {
+    align-items: center;
+    text-align: center;
+
+  }
+  body {
+    background-color: black;
+    color: aliceblue;
+  }
