--- a/pet.css
+++ b/pet.css
@@ -1,22 +1,30 @@
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: darkgrey;
-    height: 100%;
-    position: fixed;
-    overflow: auto;
-    opacity: 70%;
-  }
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: darkgrey;
+  height: 100%;
+  position: fixed;
+  overflow: auto;
+  opacity: 70%;
+}
   
-  li a {
-    display: block;
-    color: black;
-    padding: 8px 16px;
-    text-decoration: none;
-  }
-  body {
-    background-color: black;
-    color: aliceblue;
-  }
+li a {
+  display: block;
+  color: black;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+body {
+  background-color: black;
+  color: aliceblue;
+  text-align: center;
+}
+
+.container {
+  background-color: gray;
+  opacity: 80;
+  float: right;
+  width: 1600px;
+}
