--- a/kowi.css
+++ b/kowi.css
@@ -16,17 +16,33 @@ ul {
     padding: 8px 16px;
     text-decoration: none;
   }
-
-  .container {
-    border-radius: 10px;
+    .container {
+        max-width: 1000px;
+        max-height: 700px;
+        border: 20px solid black;
+        margin-right: 20px;
+        box-sizing: auto;
+        text-align: center;
+        line-height: 30px;
+        float: right;
+        font-size: x-large;
 
   }
   .elem {
-    align-items: center;
-    text-align: center;
+    background-color: grey;
+    box-sizing: border-box;
+    align-items: flex-end;
+    border: 20px black;
+    max-width: 1000px;
+
 
   }
   body {
     background-color: black;
     color: aliceblue;
+  }
+  h1 {
+    text-align: center;
+    border-left: 200px;
+    float: right;
   }
