--- a/pet.css
+++ b/pet.css
@@ -1,3 +1,10 @@
+@keyframes animacio {
+  0%   {background-color: rgb(0, 0, 0)}
+  25%  {background-color: rgb(58, 57, 57);}
+  50%  {background-color: rgb(138, 137, 137)}
+  100% {background-color: rgb(116, 116, 116)}
+}
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -16,6 +23,7 @@ li a {
   padding: 8px 16px;
   text-decoration: none;
 }
+
 body {
   background-color: black;
   color: aliceblue;
@@ -27,4 +35,14 @@ body {
   opacity: 80;
   float: right;
   width: 1600px;
+  animation-name: animacio;
+  animation-duration: 8s;
+}
+
+img:hover {
+  transform: rotate(180deg);
+}
+
+.cim:hover {
+  transform: rotateY(180deg);
 }
