--- a/kowi.css
+++ b/kowi.css
@@ -12,10 +12,15 @@ ul {
   
   li a {
     display: block;
-    color: black;
+    color: white;
     padding: 8px 16px;
     text-decoration: none;
   }
+
+  li a:hover {
+    color: black;
+  }
+
     .container {
         max-width: 1000px;
         max-height: 700px;
