--- a/pet.css
+++ b/pet.css
@@ -19,9 +19,13 @@ ul {
   
 li a {
   display: block;
-  color: black;
+  color: white;
   padding: 8px 16px;
   text-decoration: none;
+}
+
+li a:hover {
+  color: black;
 }
 
 body {
@@ -41,8 +45,10 @@ body {
 
 img:hover {
   transform: rotate(180deg);
+  transition-duration: 5s;
 }
 
 .cim:hover {
   transform: rotateY(180deg);
+  transition-duration: 5s;
 }
