--- a/style.css
+++ b/style.css
@@ -12,9 +12,13 @@ ul {
   
   li a {
     display: block;
-    color: black;
+    color: white;
     padding: 8px 16px;
     text-decoration: none;
+  }
+
+  li a:hover {
+    color: black;
   }
 
 .container {
