--- a/kowi.css
+++ b/kowi.css
@@ -3,7 +3,7 @@ ul {
     margin: 0;
     padding: 0;
     width: 200px;
-    background-color: darkgrey;
+    background-color: grey;
     height: 100%;
     position: fixed;
     overflow: auto;
